# hermes-realtime-bridge

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  hermes-realtime-bridge.service  pyproject.toml
scripts/: run_matrix_vc.py  run_matrix_vc.sh  test_connectivity.py  test_matrix_vc.py
src/hermes_realtime/: __init__.py  cli.py  core.py  tools.py
src/hermes_realtime/adapters/: __init__.py  discord_vc.py  matrix_vc.py  voice_pe.py
